- added missing column to CSV

--- a/kotlin-tornadofx-gradlemnv/src/test/websocket_client/patientDocumentation.html
+++ b/kotlin-tornadofx-gradlemnv/src/test/websocket_client/patientDocumentation.html
@@ -87,7 +87,7 @@
             {
                 if('errorCountInterruption' in jsonMessage) {
 
-                    localStorage["errorCountInterruption"] += Number(jsonMessage.errorCountInterruption);
+                    localStorage["errorCountInterruption"] = Number(localStorage["errorCountInterruption"]) + Number(jsonMessage.errorCountInterruption);
                     console.log(`added ${jsonMessage.errorCountInterruption} to localstorage. Total Errors = ${localStorage["errorCountInterruption"]}`)
 
                 }
