--- a/kotlin-tornadofx-gradlemnv/src/main/websocket_client/patientDocumentation.html
+++ b/kotlin-tornadofx-gradlemnv/src/main/websocket_client/patientDocumentation.html
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="jquery-3.6.0.min.js"></script>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="calibrationStyle.css">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
