- Added that ExperimentData is sent to hololens with cueType & settingDuration - ScreenWidth & Height are sent per Interruption instead of via handshake, because screenSize from Laptop and ExperimentScreen may differ and then the wrong size is sent - [TODO] Relaying Message from Hololens to frontend to trigger the interruption when the cue is sent manually - Added missing conversion from ms to s - Instead of sending the module rectangle, the edit button is sent

--- a/kotlin-tornadofx-gradlemnv/src/main/websocket_client/patientDocumentation.html
+++ b/kotlin-tornadofx-gradlemnv/src/main/websocket_client/patientDocumentation.html
@@ -89,6 +89,11 @@
 
                 }
             }
+            else if (type === "frontend")
+            {
+                //TODO: parseMSG and send interruption
+                sendInterruption(15)
+            }
         });
         WS.registerOnErrorHandler(function (error) {
             //document.getElementById('log').append(error +
