- main task in hidden during interruption\r\n-cueSetDuration is relayed properly

--- a/kotlin-tornadofx-gradlemnv/src/main/websocket_client/patientDocumentation.html
+++ b/kotlin-tornadofx-gradlemnv/src/main/websocket_client/patientDocumentation.html
@@ -98,7 +98,7 @@
                     console.log(`cueSetDuration was ${cueSetDuration}ms.`)
 
                     unsichtbar()
-                    window.setTimeout(sichtbar, interruptionLength);
+                    window.setTimeout(sichtbar, interruptionLength * 1000);
                 }
             }
 
