--- a/kotlin-tornadofx-gradlemnv/src/main/websocket_client/patientDocumentation.html
+++ b/kotlin-tornadofx-gradlemnv/src/main/websocket_client/patientDocumentation.html
@@ -205,8 +205,8 @@
     </div>
 </div>
 
-<div id="verdeckung" onclick="sichtbar()"></div>
-<div><button id="testbutton" onclick="unsichtbar()">Turn on Verdeckung</button></div>
+<!--<div id="verdeckung" onclick="sichtbar()"></div>-->
+<!--<div><button id="testbutton" onclick="unsichtbar()">Turn on Verdeckung</button></div>-->
 
 <div id="primaryTask" style="display: none">
 
