- Interruption-Overlay cannot be hidden anymore by clicking on it - Starting the experiment (after training) sets the index of the interruption questions to 50

--- a/kotlin-tornadofx-gradlemnv/src/main/websocket_client/patientDocumentation.html
+++ b/kotlin-tornadofx-gradlemnv/src/main/websocket_client/patientDocumentation.html
@@ -204,8 +204,7 @@
     </div>
 </div>
 
-<div id="verdeckung" onclick="sichtbar()"></div>
-<!--<div><button id="testbutton" onclick="unsichtbar()">Turn on Verdeckung</button></div>-->
+<div id="verdeckung"></div>
 
 <div id="primaryTask" style="display: none">
 
