- Added QR Code to the questionnaire to the endScreen.html

--- a/kotlin-tornadofx-gradlemnv/src/main/websocket_client/endScreen.html
+++ b/kotlin-tornadofx-gradlemnv/src/main/websocket_client/endScreen.html
@@ -12,11 +12,24 @@
 
     <script src="script.js"></script>
 
-
     <meta charset="UTF-8">
     <title>Finished</title>
+
+    <style>
+        .aligncenter {
+            text-align: center;
+        }
+    </style>
+
+
 </head>
+
 <body>
-<div id="endScreenText">You are finished! <p>Please turn to the experimenter now.</div>
+<div id="endScreenText">You are finished! <p>Please turn to the experimenter now. <p>You may access the questionnaire here: </div>
+
+<p class="aligncenter">
+    <img src="SoSciSurvey%20QR.png" alt="QR Code of the Questionnaire: https://www.soscisurvey.de/hololag/">
+</p>
+
 </body>
 </html>
